<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<item
        android:id="@+id/alltv"
        android:orderInCategory="100"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#fff"
        android:visible="false"
        android:title="12-12-2016"
        android:textStyle="bold"
        app:showAsAction="always" />-->
    <item
        android:id="@+id/datetv"
        android:orderInCategory="100"
        android:visible="false"
        android:title="12-12-2016"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#fff"
        android:textStyle="bold"
        app:showAsAction="always" />
    <item
        android:id="@+id/datebtn"
        android:orderInCategory="100"
        android:icon="@drawable/calendarwhite24"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_serviceassign"
        android:orderInCategory="100"
        android:title="@string/menu_userwise"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_changepwd"
        android:orderInCategory="100"
        android:title="@string/changepwd"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_printer"
        android:orderInCategory="100"
        android:title="@string/printer"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_db"
        android:orderInCategory="100"
        android:title="show spares"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:icon="@drawable/refresh"
        android:visible="false"
        android:title="@string/action_settings"
        app:showAsAction="always" />
</menu>
