<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="142dp">

        <LinearLayout
            android:id="@+id/LinerLayOutHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:padding="10dp"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:id="@+id/HeaderLinerlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/VehicleNoEdt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890 "
                        android:hint="@string/vehiclenoedt"
                        android:inputType="textCapCharacters"
                        android:maxLength="14"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textSize"
                        android:textStyle="normal" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TextInputLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/CustMobileNoEdt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/imageView"
                        android:hint="@string/contactnoedt"
                        android:inputType="number"
                        android:maxLength="12"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textSize"
                        android:textStyle="normal" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TextInputLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/CustNameEdt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:hint="@string/custnameedt"
                        android:inputType="text"
                        android:maxLength="50"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textSize"
                        android:textStyle="normal" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/CustDateEdtLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextAppearance">

                    <EditText
                        android:id="@+id/CustDateEdt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="false"
                        android:editable="false"
                        android:hint="Date"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textSize"
                        android:textStyle="normal" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/CustTimeEdtLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/CustTimeInEdt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:drawableRight="@drawable/time_icon"
                        android:editable="false"
                        android:hint="Time In "
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textSize"
                        android:textStyle="normal" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/PlaceEdt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/placeedt"
                        android:inputType="textEmailAddress"
                        android:maxLength="250"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textSize"
                        android:textStyle="normal" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayoutList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/HeaderLinerlayout"
                android:layout_margin="5dp"
                android:layout_weight="3"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:padding="10dp"
                    android:text="Reason*"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSizeReports" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical"

                    >

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black">

                <EditText
                    android:id="@+id/RemarksEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:hint="Reason For Cancel :"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:maxLength="500"
                    android:minLines="5"
                    android:padding="10dp"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSize"
                    android:textStyle="normal" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/IdNextBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/button_background"
                android:text="Next"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:visibility="visible"
                app:backgroundTint="@color/btn_colored_background_tint" />

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>